0.02
 - Add XLST transformations for newer versions.
 - Add check for XSLT file in input.
 - Add constructor test.
 - Add version() method.
 - Add 'version' parameter.
 - Update copyright years.

0.01 2024-06-21T19:54:45+02:00
 - First version.