@@ -3,8 +3,9 @@ TODO
 1. Doc
 2. Tests.
 3. license CC0 + BSD.
-4. Implement Utils.pm with list_versions() function.
 5.
 
 Applied
 =======
+4. Implement Utils.pm with list_versions() function.
+OK [20250109] skim
